fixed navbar overflow with a position fixed (mobile)

--- a/src/containers/Header/Header.module.scss
+++ b/src/containers/Header/Header.module.scss
@@ -77,6 +77,8 @@
   }
   .navbarOpened{
     overflow-x: visible;
+    position: fixed;
+    right: 0;
   }
   .navbarOpened .navbar__linksContainer{
       right: 0;
